[tool.poetry]
name = "pyslam"
version = "0.1.0"
description = "Python implementation for some common SLAM algorithms."
authors = ["Adithya Yerramsetty <adithyay@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
numpy = "^1.24.2"
opencv-python = "^4.7.0.68"
pytest = "^7.2.1"
sphinx = "^6.1.3"
pytransform3d = "^2.3.1"
mypy = "^1.0.1"
flake8 = "^6.0.0"
black = "^23.1.0"
furo = "^2022.12.7"
sphinx-autoapi = "^2.0.1"
pylint = "^2.16.2"
pose3d = "^2.1.0"
pygame = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
