[tool.poetry]
name = "pyslam"
version = "0.1.0"
description = "Python implementation for some common SLAM algorithms."
authors = ["Adithya Yerramsetty <adithyay@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
numpy = "^1.24.2"
opencv-python = "^4.7.0.68"
pytest = "^7.2.1"
sphinx = "^6.1.3"
pytransform3d = "^2.3.1"
mypy = "^1.0.1"
flake8 = "^6.0.0"
black = "^23.1.0"
furo = "^2022.12.7"
sphinx-autoapi = "^2.0.1"
pylint = "^2.16.2"
pose3d = "^2.1.0"
pygame = "^2.2.0"
pyglet = "^2.0.5"
pillow = "^9.4.0"
scipy = "^1.10.1"
jax = {extras = ["cpu"], version = "^0.4.6"}
faiss-cpu = "^1.7.3"
myst-parser = "^1.0.0"
transforms3d = "^0.4.1"
torch = "^2.0.0"
dask = "^2023.4.0"
kornia = "^0.6.11"
open3d = "^0.17.0"
scikit-learn = "^1.2.2"
addict = "^2.4.0"
tqdm = "^4.65.0"
imageio = "^2.27.0"
av = "^10.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
